--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
     </section>
     <!-- popular products section -->
-    <section class="mt-20 bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)">
+    <section class="mt-20 bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)">   
        <div class="lg:mt-20 mt-10 md:container mx-auto lg:w-5/6">
         <h2 class="font-bold lg:text-2xl text-xl mb-10 text-[#179800] text-justify">Popular Products</h2>
         <div class="grid lg:grid-cols-[1fr_2fr] gap-4 grid-cols-1 md:grid-cols-[1fr_2fr] w-5/6 lg:w-full mx-auto">
@@ -283,77 +283,126 @@
       </div>
     </section>
     <!-- clint section -->
-    <section class="lg:mt-20 mt-10 md:container mx-auto lg:w-5/6">
-          <h1 class="font-bold lg:text-4xl text-2xl mb-10 text-[#179800]">Happy Clients
-              says</h1>
-          <div class="flex flex-col lg:flex-row lg:gap-4 mt-20">
-            <!-- clint01 -->
-            <div class="card bg-base-100 w-96 shadow-2xl">
-              <figure class="px-10 pt-10">
-                <img src="./assets/user-1.png" alt="clint-01" class="w-1/2" />
-              </figure>
-              <div class="card-body items-center text-center">
-                <p>Slate helps you see how
-                  many more days you need
-                  to work to reach your financial
-                  goal for the month and year.</p>
-                <h2 class="card-title">Minhajul</h2>
-                <div>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa-regular fa-star"></span>
-                </div>
-                <small>Freelancer</small>
+    <section class="bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)">
+      <div class="lg:mt-20 mt-10 md:container lg:w-5/6 w-4/5 mx-auto ">
+        <h2 class="font-bold lg:text-2xl text-xl text-start text-[#179800]">What Our Customers Say</h2>
+        <div class="flex flex-col lg:flex-row lg:gap-4 mt-20 gap-y-5 mx-auto items-center">
+          <!-- clint01 -->
+          <div class="card bg-base-100 w-96 shadow-2xl">
+            <figure class="px-10 pt-10">
+              <img src="./assets/user-1.png" alt="clint-01" class="w-1/2" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <p class="text-[12px] w-5/6">Great quality groceries and fast delivery! Highly recommended</p>
+              <h2 class="card-title">Minhajul A. Shahin</h2>
+              <div>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
               </div>
-            </div>
-            <!-- clint02 -->
-            <div class="card bg-base-100 w-96 shadow-2xl">
-              <figure class="px-10 pt-10">
-                <img src="./assets/user-2.png" alt="clint-01" class="w-1/2" />
-              </figure>
-              <div class="card-body items-center text-center">
-                <p>Slate helps you see how
-                  many more days you need
-                  to work to reach your financial
-                  goal for the month and year.</p>
-                <h2 class="card-title">Poly</h2>
-                <div>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa-regular fa-star"></span>
-                </div>
-                <small>Teacher</small>
-              </div>
-            </div>
-            <!-- clint03 -->
-            <div class="card bg-base-100 w-96 shadow-2xl">
-              <figure class="px-10 pt-10">
-                <img src="./assets/user-3.png" alt="clint-01" class="w-1/2" />
-              </figure>
-              <div class="card-body items-center text-center">
-                <p>Slate helps you see how
-                  many more days you need
-                  to work to reach your financial
-                  goal for the month and year.</p>
-                <h2 class="card-title">Komola</h2>
-                <div>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa fa-star checked text-yellow-500"></span>
-                  <span class="fa-regular fa-star"></span>
-                </div>
-                <small>Designer</small>
-              </div>
+              <small>Freelancer</small>
             </div>
           </div>
+          <!-- clint02 -->
+          <div class="card bg-base-100 w-96 shadow-2xl">
+            <figure class="px-10 pt-10">
+              <img src="./assets/user-2.png" alt="clint-01" class="w-1/2" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <p class="text-[12px] w-5/6">Affordable prices and fresh produce. My go-to grocery store!</p>
+              <h2 class="card-title">Sarah Johnson</h2>
+              <div>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa-regular fa-star"></span>
+              </div>
+              <small>Teacher</small>
+            </div>
+          </div>
+          <!-- clint03 -->
+          <div class="card bg-base-100 w-96 shadow-2xl">
+            <figure class="px-10 pt-10">
+              <img src="./assets/user-3.png" alt="clint-01" class="w-1/2" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <p class="text-[12px] w-5/6">Excellent customer service and fresh vegetables.Love shopping here!</p>
+              <h2 class="card-title">Emily Davis</h2>
+              <div>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+                <span class="fa fa-star checked text-yellow-500"></span>
+              </div>
+              <small>Designer</small>
+            </div>
+          </div>
+        </div>
+      </div>    
     </section>
+    <!-- grocery news section -->
+     <section class="relative">
+      <div class="bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25) rounded-xl lg:mt-20 mt-10 md:container lg:w-5/6 w-3/4 mx-auto relative -bottom-20">
+        <div class=" flex flex-col lg:flex-row items-center justify-center mx-auto">
+          <figure>
+            <img src="./assets/vegetable-busket.png" alt=basket" class="w-2/3 mx-auto"/>
+          </figure>
+          <div class="flex-col items-center space-y-5 justify-center text-center lg:text-start">
+            <h2 class="text-2xl lg:text-[#111111] text-[#179800]">Get Grocery News!</h2>
+            <p class="w-4/5 text-[12px] mx-auto lg:mx-0">Exclusive training tips, ticks, product deals and more.</p>
+            <input type="email" name="E-mail" class="bg-white lg:px-20 lg:py-4 px-15 py-4 rounded-lg" placeholder="Enter Your Email..">
+            <div class="card-actions ">
+              <button class="btn btn-primary text-white bg-[#179800] border-none hover:bg-[#179800] px-10 text-center mx-auto lg:mx-0">Subscribe</button>
+            </div>
+          </div>
+        </div>
+      </div>  
+     </section>
   </main>
-  <footer></footer>
+  <!-- footer section -->
+  <footer class="footer bg-base-300 text-base-content px-15 py-28 bg-[#179800] text-white">
+    <nav>
+      <img src="./assets/logo-footer.png" alt="">
+      <p class="w-1/2">"Bringing You Fresh, Quality Groceries at the Best Prices – Straight to Your Doorstep!" 🚛🛒🥦</p>
+    </nav>
+    <nav>
+      <h6 class="footer-title">Company</h6>
+      <a class="link link-hover">About us</a>
+      <a class="link link-hover">Contact</a>
+      <a class="link link-hover">Jobs</a>
+      <a class="link link-hover">Press kit</a>
+    </nav>
+    <nav>
+      <h6 class="footer-title">Social</h6>
+      <div class="grid grid-flow-col gap-4">
+        <a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+            <path
+              d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z">
+            </path>
+          </svg>
+        </a>
+        <a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+            <path
+              d="M19.615 3.184c-3.604-.246-11.631-.245-15.23 0-3.897.266-4.356 2.62-4.385 8.816.029 6.185.484 8.549 4.385 8.816 3.6.245 11.626.246 15.23 0 3.897-.266 4.356-2.62 4.385-8.816-.029-6.185-.484-8.549-4.385-8.816zm-10.615 12.816v-8l8 3.993-8 4.007z">
+            </path>
+          </svg>
+        </a>
+        <a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
+            <path
+              d="M9 8h-3v4h3v12h5v-12h3.642l.358-4h-4v-1.667c0-.955.192-1.333 1.115-1.333h2.885v-5h-3.808c-3.596 0-5.192 1.583-5.192 4.615v3.385z">
+            </path>
+          </svg>
+        </a>
+      </div>
+    </nav>
+  </footer>
 </body>
 
 </html>
