--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="grid lg:grid-cols-[1fr_2fr] gap-4 grid-cols-1 md:grid-cols-[1fr_2fr] w-5/6 lg:w-full mx-auto">
           <!-- discount card section -->
           <div style="background: linear-gradient(to right, #63f649, #b8f8c6); border-radius:20px;">  
-            <div class="card shadow-xl bg-[url(/assets/vegetable-offer.png)] bg-right-bottom bg-no-repeat bg-(length:[10px]) p-18 relative">
+            <div class="card shadow-xl bg-[url(./assets/vegetable-offer.png)] bg-right-bottom bg-no-repeat bg-(length:[10px]) p-18 relative">
               <div class="card-body relative bottom-15 right-18">
                 <h2 class="card-title text-white text-3xl">30% Off</h2>
                 <p class="text-[#111111] text-[12px] font-bold">Stock up on fresh and healthy products at unbeatable prices. Don't miss out—shop now before the offer ends!</p>
