--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <style type="text/tailwindcss">
     @theme {
           --color-clifford: #da373d;
-          --color-primary:[gradient-to-br from-lime-500 to-lime-200];
         }
       </style>
 </head>
@@ -346,7 +345,7 @@
     </section>
     <!-- grocery news section -->
      <section class="relative">
-      <div class="bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25) rounded-xl lg:mt-20 mt-10 md:container lg:w-5/6 w-3/4 mx-auto relative -bottom-20">
+      <div class="bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25) rounded-xl lg:mt-20 mt-10 md:container lg:w-5/6 w-3/4 mx-auto relative -bottom-35">
         <div class=" flex flex-col lg:flex-row items-center justify-center mx-auto">
           <figure>
             <img src="./assets/vegetable-busket.png" alt=basket" class="w-2/3 mx-auto"/>
@@ -364,20 +363,19 @@
      </section>
   </main>
   <!-- footer section -->
-  <footer class="footer bg-base-300 text-base-content px-15 py-28 bg-[#179800] text-white">
+  <footer class="footer bg-base-300 text-base-content px-15 py-45 bg-[#179800] text-white">
     <nav>
       <img src="./assets/logo-footer.png" alt="">
-      <p class="w-1/2">"Bringing You Fresh, Quality Groceries at the Best Prices – Straight to Your Doorstep!" 🚛🛒🥦</p>
+      <p class="w-1/2">"Bringing You Fresh, Quality Groceries at the Best Prices – Straight to Your Doorstep!"</p>
+    </nav>
+    <nav class="mr-20">
+      <a class="link link-hover">Product</a>
+      <a class="link link-hover">Service</a>
+      <a class="link link-hover">Contact Us</a>
+      <a class="link link-hover">About Us</a>
     </nav>
     <nav>
-      <h6 class="footer-title">Company</h6>
-      <a class="link link-hover">About us</a>
-      <a class="link link-hover">Contact</a>
-      <a class="link link-hover">Jobs</a>
-      <a class="link link-hover">Press kit</a>
-    </nav>
-    <nav>
-      <h6 class="footer-title">Social</h6>
+      <h6 class="footer-title">Follow Us</h6>
       <div class="grid grid-flow-col gap-4">
         <a>
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current">
