--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@
     <section class="mt-20 bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)">   
        <div class="lg:mt-20 mt-10 md:container mx-auto lg:w-5/6">
         <h2 class="font-bold lg:text-2xl text-xl mb-10 text-[#179800] text-justify">Popular Products</h2>
-        <div class="grid lg:grid-cols-[1fr_2fr] gap-4 grid-cols-1 md:grid-cols-[1fr_2fr] w-5/6 lg:w-full mx-auto">
+        <div class="grid lg:grid-cols-[1fr_2fr] gap-4 grid-cols-1 w-5/6 md:2/3 lg:w-full mx-auto">
           <!-- discount card section -->
           <div style="background: linear-gradient(to right, #63f649, #b8f8c6); border-radius:20px;">  
-            <div class="card shadow-xl bg-[url(./assets/vegetable-offer.png)] bg-right-bottom bg-no-repeat bg-(length:[10px]) p-18 relative">
+            <div class="card shadow-xl bg-[url(./assets/vegetable-offer.png)] bg-right-bottom bg-no-repeat p-18 relative">
               <div class="card-body relative bottom-15 right-18">
-                <h2 class="card-title text-white text-3xl">30% Off</h2>
-                <p class="text-[#111111] text-[12px] font-bold">Stock up on fresh and healthy products at unbeatable prices. Don't miss out—shop now before the offer ends!</p>
+                <h2 class="card-title text-white text-2xl">30% Off</h2>
+                <p class="text-[#111111] lg:text-[12px] md:text-[10px] text-[8px] font-medium">Stock up on fresh and healthy products at unbeatable prices. Don't miss out—shop now before the offer ends!</p>
                 <div class="card-actions justify-start">
                   <button class="btn btn-primary bg-white border-none text-[#111111] hover:bg-white">Buy Now</button>
                 </div>
@@ -152,7 +152,7 @@
                 <div class="card-body text-xs font-semibold">
                   <h2 class=""><i class="fa-solid fa-star text-yellow-500"></i> 4.5</h2>
                   <p>Onion 1 KG</p>
-                  <p>$3.99</p>
+                  <p class="text-[10px]">$3.99</p>
                 </div>
               </div>
               <div class="card card-side shadow-xl bg-white flex items-center justify-between">
@@ -164,7 +164,7 @@
                 <div class="card-body text-xs font-semibold">
                   <h2 class=""><i class="fa-solid fa-star text-yellow-500"></i> 4.8</h2>
                   <p>Potato 1 KG</p>
-                  <p>$2.99</p>
+                  <p class="text-[10px]">$2.99</p>
                 </div>
               </div>
               <div class="card card-side shadow-xl bg-white flex items-center justify-between">
@@ -176,7 +176,7 @@
                 <div class="card-body text-xs font-semibold">
                   <h2 class=""><i class="fa-solid fa-star text-yellow-500"></i> 4.6</h2>
                   <p>Tomato 1 KG</p>
-                  <p>$1.00</p>
+                  <p class="text-[10px]">$1.00</p>
                 </div>
               </div>
               <div class="card card-side shadow-xl bg-white flex items-center justify-between">
@@ -188,7 +188,7 @@
                 <div class="card-body text-xs font-semibold">
                   <h2 class=""><i class="fa-solid fa-star text-yellow-500"></i> 4.9</h2>
                   <p>Egg 1 dozen</p>
-                  <p>$4.99</p>
+                  <p class="text-[10px]">$4.99</p>
                 </div>
               </div>
               <div class="card card-side shadow-xl bg-white flex items-center justify-between">
@@ -200,7 +200,7 @@
                 <div class="card-body text-xs font-semibold">
                   <h2 class=""><i class="fa-solid fa-star text-yellow-500"></i> 4.5</h2>
                   <p>Garlic 1 KG</p>
-                  <p>$5.99</p>
+                  <p class="text-[10px]">$5.99</p>
                 </div>
               </div>
               <div class="card card-side shadow-xl bg-white flex items-center justify-between">
@@ -212,7 +212,7 @@
                 <div class="card-body text-xs font-semibold">
                   <h2 class=""><i class="fa-solid fa-star text-yellow-500"></i> 4.5</h2>
                   <p>Apple 1 KG</p>
-                  <p>$3.99</p>
+                  <p class="text-[10px]">$3.99</p>
                 </div>
               </div>
               <div class="card card-side shadow-xl bg-white flex items-center justify-between">
@@ -224,7 +224,7 @@
                 <div class="card-body text-xs font-semibold">
                   <h2 class=""><i class="fa-solid fa-star text-yellow-500"></i> 4.5</h2>
                   <p>Onion 1 KG</p>
-                  <p>$39.99</p>
+                  <p class="text-[10px]">$39.99</p>
                 </div>
               </div>
               <div class="card card-side shadow-xl bg-white flex items-center justify-between">
@@ -236,7 +236,7 @@
                 <div class="card-body text-xs font-semibold">
                   <h2 class=""><i class="fa-solid fa-star text-yellow-500"></i> 4.5</h2>
                   <p>Onion 1 KG</p>
-                  <p>$39.99</p>
+                  <p class="text-[10px]">$39.99</p>
                 </div>
               </div>
               <div class="card card-side shadow-xl bg-white lg:flex items-center justify-between hidden">
@@ -248,39 +248,41 @@
                 <div class="card-body text-xs font-semibold">
                   <h2 class=""><i class="fa-solid fa-star text-yellow-500"></i> 4.5</h2>
                   <p>Onion 1 KG</p>
-                  <p>$39.99</p>
+                  <p class="text-[10px]">$39.99</p>
                 </div>
               </div>
           </div>
         </div>
        </div>
     </section>
-    <!-- Arrival & Offers section -->
-    <section class="lg:mt-20 mt-10 md:container mx-auto lg:w-5/6 w-4/5">
-      <h2 class="font-bold lg:text-2xl text-xl text-start mb-10 text-[#179800]">Arrival & Offers</h2>
-      <div class="lg:flex lg:gap-10 lg:flex-row grid grid-cols-1 gap-5 grid-span-1">
-       <div class="flex bg-[#115414] items-center justify-between p-6 rounded-xl flex-1">
-       <div class="space-y-5">
+  <!-- Arrival & Offers section -->
+  <section class="lg:mt-20 mt-10 md:container mx-auto lg:w-5/6 w-4/5">
+    <h2 class="font-bold lg:text-2xl text-xl text-start mb-10 text-[#179800]">Arrival & Offers</h2>
+    <div class="grid lg:grid-cols-[2fr_1fr] md:grid-cols-[2fr_1fr] grid-cols-1 gap-5 grid-span-1 md:grid-cols-2">
+      <div class="flex bg-[#115414] items-center justify-between p-6 rounded-xl col-span-1">
+        <div class="space-y-5">
           <img src="./assets/dawat-logo.png" alt="" class="">
-          <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#63B76D] text-white text-sm h-full">Cook Exotic Dishes</button>
-          <h2 class="text-white text-xl">UP to 20% OFF</h2>
-       </div>
-       <div>
-        <img src="./assets/dawat-mock-up.png" alt="" class="">
-       </div>
-       </div>
-       <div class="flex bg-[#102861] items-center justify-between px-3 rounded-xl">
-       <div class="space-y-3">
-          <img src="./assets/india-gate-logo.png" alt="" class="">
-          <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#2A4D97] text-white text-sm">World's No 1 Rice</button>
-          <h2 class="text-white text-xl">UP to 40% OFF</h2>
-       </div>
-       <div>
-        <img src="./assets/india-gate-mock-up.png" alt="" class="w-2/3 lg:w-full md:w-full">
-       </div>
-       </div>
+          <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#63B76D] text-white text-sm h-full">Cook Exotic
+            Dishes</button>
+          <h2 class="text-white text-md">UP to 20% OFF</h2>
+        </div>
+        <div>
+          <img src="./assets/dawat-mock-up.png" alt="" class="">
+        </div>
       </div>
-    </section>
+      <div class="flex bg-[#102861] items-center justify-between p-3 rounded-xl">
+        <div class="space-y-3">
+          <img src="./assets/india-gate-logo.png" alt="" class="">
+          <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#2A4D97] text-white text-sm h-full">World's No 1
+            Rice</button>
+          <h2 class="text-white text-md">UP to 40% OFF</h2>
+        </div>
+        <div>
+          <img src="./assets/india-gate-mock-up.png" alt="" class="w-2/3 lg:w-full md:w-full">
+        </div>
+      </div>
+    </div>
+  </section>
     <!-- clint section -->
     <section class="bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)">
       <div class="lg:mt-20 mt-10 md:container lg:w-5/6 w-4/5 mx-auto ">
@@ -364,9 +366,9 @@
   </main>
   <!-- footer section -->
   <footer class="footer bg-base-300 text-base-content px-15 py-45 bg-[#179800] text-white">
-    <nav>
+    <nav class="ml-10">
       <img src="./assets/logo-footer.png" alt="">
-      <p class="w-1/2">"Bringing You Fresh, Quality Groceries at the Best Prices – Straight to Your Doorstep!"</p>
+      <p class="w-1/2 text-[12px]">"Bringing You Fresh, Quality Groceries at the Best Prices – Straight to Your Doorstep!"</p>
     </nav>
     <nav class="mr-20">
       <a class="link link-hover">Product</a>
