revise the project and add some section

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   <!-- Arrival & Offers section -->
   <section class="lg:mt-20 mt-10 md:container mx-auto lg:w-5/6 w-4/5">
     <h2 class="font-bold lg:text-2xl text-xl text-start mb-10 text-[#179800]">Arrival & Offers</h2>
-    <div class="grid lg:grid-cols-[2fr_1fr] md:grid-cols-[2fr_1fr] grid-cols-1 gap-5 grid-span-1 md:grid-cols-2">
+    <div class="grid lg:grid-cols-[2fr_1fr] md:grid-cols-[2fr_1fr] grid-cols-1 gap-5 grid-span-1">
       <div class="flex bg-[#115414] items-center justify-between p-6 rounded-xl col-span-1">
         <div class="space-y-5">
           <img src="./assets/dawat-logo.png" alt="" class="">
@@ -284,6 +284,7 @@
     </div>
   </section>
     <!-- clint section -->
+     <!-- extra section: challenge part -->
     <section class="bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25)">
       <div class="lg:mt-20 mt-10 md:container lg:w-5/6 w-4/5 mx-auto ">
         <h2 class="font-bold lg:text-2xl text-xl text-start text-[#179800]">What Our Customers Say</h2>
@@ -345,9 +346,15 @@
         </div>
       </div>    
     </section>
+    <div class="text-center text-[#179800] relative top-16">
+      <span class="loading loading-ball loading-xs"></span>
+      <span class="loading loading-ball loading-sm"></span>
+      <span class="loading loading-ball loading-md"></span>
+      <span class="loading loading-ball loading-lg"></span>
+    </div>
     <!-- grocery news section -->
      <section class="relative">
-      <div class="bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25) rounded-xl lg:mt-20 mt-10 md:container lg:w-5/6 w-3/4 mx-auto relative -bottom-35">
+      <div class="bg-[#EFEBE3] bg-cover py-10 drop-shadow-[0_35px_35px_rgba(0,0,0,0.25) rounded-xl md:container lg:w-5/6 w-3/4 mx-auto relative -bottom-35">
         <div class=" flex flex-col lg:flex-row items-center justify-center mx-auto">
           <figure>
             <img src="./assets/vegetable-busket.png" alt=basket" class="w-2/3 mx-auto"/>
@@ -365,18 +372,18 @@
      </section>
   </main>
   <!-- footer section -->
-  <footer class="footer bg-base-300 text-base-content px-15 py-45 bg-[#179800] text-white">
+  <footer class="footer bg-base-300 text-base-content lg:px-15 py-45 bg-[#179800] text-white">
     <nav class="ml-10">
       <img src="./assets/logo-footer.png" alt="">
       <p class="w-1/2 text-[12px]">"Bringing You Fresh, Quality Groceries at the Best Prices – Straight to Your Doorstep!"</p>
     </nav>
-    <nav class="mr-20">
+    <nav class="mr-20 ml-15">
       <a class="link link-hover">Product</a>
       <a class="link link-hover">Service</a>
       <a class="link link-hover">Contact Us</a>
       <a class="link link-hover">About Us</a>
     </nav>
-    <nav>
+    <nav class="ml-15">
       <h6 class="footer-title">Follow Us</h6>
       <div class="grid grid-flow-col gap-4">
         <a>
