finalize the project and add some animation

--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
       </div>
     </nav>
     <!-- Hero section -->
+    <div class="animate-bounce relative top-10 left-22 text-3xl lg:left-130">🍅</div>
     <div class="text-center relative mt-10 md:container mx-auto w-5/6">
       <h1 class="lg:text-4xl text-3xl font-extrabold w-5/6 mx-auto text-[#111111]">Freshness <span
-          class="text-[#179800]">You
-          Can</span> <br>
+        class="text-[#179800]">You
+        Can</span> <br>
         <span class="text-[#179800]">Count</span> On, Prices You’ll Love!
       </h1>
       <p class="text-gray-400 text-xs w-2/3 mx-auto lg:w-full">Shop your daily essentials at unbeatable prices. From
         fresh produce to pantry <br>staples, we’ve got you covered everyday!</p>
-      <img src="./assets/hero-vegetables.png" alt="" class="w-3/4 mx-auto">
+        <img src="./assets/hero-vegetables.png" alt="" class="w-3/4 mx-auto">
     </div>
     <!-- card animation -->
     <div
@@ -367,6 +368,7 @@
         <div class=" flex flex-col lg:flex-row items-center justify-center mx-auto">
           <figure>
             <img src="./assets/vegetable-busket.png" alt=basket" class="w-2/3 mx-auto" />
+           
           </figure>
           <div class="flex-col items-center space-y-5 justify-center text-center lg:text-start">
             <h2 class="text-2xl lg:text-[#111111] text-[#179800]">Get Grocery News!</h2>
