final revision done and complete my project

--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
       </div>
     </nav>
     <!-- Hero section -->
-    <div class="animate-bounce relative top-10 left-22 text-3xl lg:left-130">🍅</div>
     <div class="text-center relative mt-10 md:container mx-auto w-5/6">
       <h1 class="lg:text-4xl text-3xl font-extrabold w-5/6 mx-auto text-[#111111]">Freshness <span
         class="text-[#179800]">You
@@ -271,7 +270,7 @@
         <div class="flex bg-[#115414] items-center justify-between p-6 rounded-xl col-span-1">
           <div class="space-y-5">
             <img src="./assets/dawat-logo.png" alt="" class="">
-            <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#63B76D] text-white text-sm h-full">Cook Exotic
+            <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#63B76D] text-white text-sm h-full hover:bg-[#115414]">Cook Exotic
               Dishes</button>
             <h2 class="text-white text-md">UP to 20% OFF</h2>
           </div>
@@ -282,8 +281,7 @@
         <div class="flex bg-[#102861] items-center justify-between p-3 rounded-xl">
           <div class="space-y-3">
             <img src="./assets/india-gate-logo.png" alt="" class="">
-            <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#2A4D97] text-white text-sm h-full">World's No 1
-              Rice</button>
+            <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg bg-[#2A4D97] text-white text-sm h-full hover:bg-[#102861]">World's No 1 Rice</button>
             <h2 class="text-white text-md">UP to 40% OFF</h2>
           </div>
           <div>
