--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <img src="./assets/hero-vegetables.png" alt="" class="w-3/4 mx-auto">
     </div>
     <!-- card animation -->
+    <div class="text-2xl animate-bounce absolute top-20 left-26 lg:left-135 md:left-95">🍅</div>
     <div
       class="inline-block w-22 drop-shadow-md mt-10 animate-bounce rounded-full absolute bg-white p-1 lg:top-[16rem] lg:right-[16rem] top-55 right-1 md:right-10 ">
       <img src="./assets/vegetables.png" alt="" class="mx-auto">
